all pages done,just have to fix dropdown now

--- a/crs/signin.html
+++ b/crs/signin.html
@@ -10,13 +10,12 @@
 	<link rel="stylesheet" href="main.css" />
 </head>
 <body>
-
 	<div class="container top-spacing">
 		<div class="row">
 			<form class="form-horizontal  col-md-6 col-md-offset-3 jumbotron" action="">
 				<fieldset>
-					<span class="icon-preview col-lg-9 hidden-md hidden-sm hidden-xs" ><i class="mdi-action-account-circle "></i><span></span></span>
-					<legend class="col-lg-3 ">Sign Up</legend>
+					<span class="icon-preview col-lg-9 hidden-md hidden-sm hidden-xs" ><i class="mdi-action-account-circle"></i><span></span></span>
+					<legend class="col-lg-3 ">Sign In</legend>
 					<div class="form-group">
 						<label for="inputEmail" class="col-lg-2 control-label">Email</label>
 						<div class="col-lg-10">
@@ -28,13 +27,7 @@
 							<input type="password" class="form-control" id="inputPassword" required placeholder="Password">
 							<br></div>
 					</div>
-					<div class="form-group">
-						<label for="confirmInputPassword" class="col-lg-2 control-label">Confirm Password</label>
-						<div class="col-lg-10">
-							<input type="password" class="form-control" id="inputPassword" required  placeholder="Password">
-							<br>
-						</div>
-					</div>
+
 					<div class="form-group">
 						<div class="col-lg-3 col-lg-offset-9">
 							<button type="submit" class="btn btn-primary">Submit</button>
