--- a/crs/index.html
+++ b/crs/index.html
@@ -73,7 +73,7 @@
 	</div>
 	<div class="container">
 		<div class="media well">
-		<h2>How to hack a website</h2>
+			<h2>How to hack a website</h2>
 			<a class="pull-left" href="#">
 				<img class="media-object" src="http://placehold.it/64x64" alt=""></a>
 			<div class="media-body">
@@ -85,10 +85,11 @@
 			</div>
 			<div class="col-md-2 col-md-offset-10">
 				<a href="post.html" class="btn btn-primary btn-xs">Read More</a>
-			</div><!-- /.col-md-3 col-md-offset-9 --> 
+			</div>
+			<!-- /.col-md-3 col-md-offset-9 -->
 		</div>
 		<div class="media well">
-		<h2>CSS Animations</h2>
+			<h2>CSS Animations</h2>
 			<a class="pull-left" href="#">
 				<img class="media-object" src="http://placehold.it/64x64" alt=""></a>
 			<div class="media-body">
@@ -100,10 +101,11 @@
 			</div>
 			<div class="col-md-2 col-md-offset-10">
 				<a href="post.html" class="btn btn-primary btn-xs">Read More</a>
-			</div><!-- /.col-md-3 col-md-offset-9 --> 
+			</div>
+			<!-- /.col-md-3 col-md-offset-9 -->
 		</div>
 		<div class="media well">
-		<h2>My wordpress blog</h2>
+			<h2>My wordpress blog</h2>
 			<a class="pull-left" href="#">
 				<img class="media-object" src="http://placehold.it/64x64" alt=""></a>
 			<div class="media-body">
@@ -115,10 +117,11 @@
 			</div>
 			<div class="col-md-2 col-md-offset-10">
 				<a href="post.html" class="btn btn-primary btn-xs">Read More</a>
-			</div><!-- /.col-md-3 col-md-offset-9 --> 
+			</div>
+			<!-- /.col-md-3 col-md-offset-9 -->
 		</div>
 		<div class="media well">
-		<h2>Nodebots</h2>
+			<h2>Nodebots</h2>
 			<a class="pull-left" href="#">
 				<img class="media-object" src="http://placehold.it/64x64" alt=""></a>
 			<div class="media-body">
@@ -130,8 +133,35 @@
 			</div>
 			<div class="col-md-2 col-md-offset-10">
 				<a href="post.html" class="btn btn-primary btn-xs">Read More</a>
-			</div><!-- /.col-md-3 col-md-offset-9 --> 
+			</div>
+			<!-- /.col-md-3 col-md-offset-9 -->
 		</div>
+		<div class="center-pagination col-md-6 col-md-offset-4">
+			<ul class="pagination">
+				<li>
+					<a href="#">&laquo;</a>
+				</li>
+				<li>
+					<a href="#">1</a>
+				</li>
+				<li>
+					<a href="#">2</a>
+				</li>
+				<li>
+					<a href="#">3</a>
+				</li>
+				<li>
+					<a href="#">4</a>
+				</li>
+				<li>
+					<a href="#">5</a>
+				</li>
+				<li>
+					<a href="#">&raquo;</a>
+				</li>
+			</ul>
+		</div>
+		<!-- /.center-pagination -->
 	</div>
 	<!-- /.container -->
 	<!-- Latest compiled and minified JavaScript -->
